--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,800" rel="stylesheet">
   <meta charset="utf-8">
-  <title>DYC Survey</title>
+  <title>Purchase Orders</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.5fdf47ba1da1e357f851.css"></head>
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/18.2.6/css/dx.common.css" />
+  <link rel="dx-theme" data-theme="dx-dark" type="text/css" href="https://cdn3.devexpress.com/jslib/18.2.6/css/dx.dark.css" data-active="false"/>
+  <link rel="dx-theme" data-theme="dx-light" type="text/css" href="https://cdn3.devexpress.com/jslib/18.2.6/css/dx.carmine.css" data-active="true"/>
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,800" rel="stylesheet">
+
+  <link rel="icon" type="image/x-icon" href="assets/pointers/tortue.ico">
+  <!-- <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:1238126,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script> -->
+
+  <!-- <script src="https://checkout.stripe.com/checkout.js" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script> -->
+<link rel="stylesheet" href="styles.d196d27e85bfd41e5570.css"></head>
 <body>
   <app-root></app-root>
-
-  <noscript>
-  Please enable JavaScript to run this application.
-  </noscript>  
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7a0e6866a34e280f48e7.js"></script><script type="text/javascript" src="main.2e34f9448140f58b2f2b.js"></script></body>
+<script type="text/javascript" src="runtime.7c59c9e4c876267ceab8.js"></script><script type="text/javascript" src="polyfills.c345549d177b6954e825.js"></script><script type="text/javascript" src="scripts.08265068c6ad0db6ed3c.js"></script><script type="text/javascript" src="main.b0809b2447abde18a171.js"></script></body>
 </html>
